--- a/example/main.css
+++ b/example/main.css
@@ -16,6 +16,9 @@
 #game > #game-screen > canvas {
     width: 100%;
     height: 100%;
+    image-rendering: pixelated;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: crisp-edges;
 }
 
 #game > #game-controls {
